# zoet-rs

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  publish.sh  rustfmt.toml
src/: error.rs  function_args.rs  lib.rs  self_replacer.rs  traits.rs  with_tokens.rs  zoet.rs
tests/: length.rs  try_from.rs
zoet/: Cargo.toml
zoet-macro/: Cargo.toml
zoet-macro/src/: error.rs  function_args.rs  lib.rs  self_replacer.rs  traits.rs  with_tokens.rs  zoet.rs
zoet/src/: lib.md  lib.rs
zoet/tests/: copy_attrs.rs  future.rs  generics.rs  iterator.rs  length.rs  nightly.rs  std_tests.rs  try_from.rs
