[package]
name = "zoet"
version = "0.1.3"
authors = ["Peter Corlett <abuse@cabal.org.uk>"]
edition = "2018"
description = "Adds `#[zoet]` macro to reduce boilerplate when implementing common traits."
license = "MIT"
repository = "https://github.com/mooli/zoet-rs"
keywords = ["macro", "derive", "trait", "boilerplate", "sweet"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "no-std", "rust-patterns" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []

# enable to have clippy complain about everything
clippy-insane = []

[dependencies]
proc-macro2 = { version = "1.0.2", default-features = false, features = ["span-locations"] }
quote = { version = "1.0.2", default-features = false }

[dependencies.syn]
version = "1.0.5"
default-features = false
features = [
        "clone-impls",
        "extra-traits",
        "fold",
        "full",
        "parsing",
        "printing",
        "proc-macro",
]
