[package]
name = "zoet-macro"
version = "0.1.8"
authors = ["Peter Corlett <abuse@cabal.org.uk>"]
edition = "2021"
description = "Implementation detail for `#[zoet]` macro"
license = "MIT"
repository = "https://github.com/mooli/zoet-rs"
keywords = ["macro", "derive", "trait", "boilerplate", "sweet"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "no-std", "rust-patterns" ]
readme = "../README.md"

[features]
alloc = []
clippy-insane = []
nightly = []

[dependencies]
proc-macro-error = { version = "1.0.4", default-features = false, features = ["syn-error"] }
proc-macro2 = { version = "1.0.33", default-features = false, features = ["span-locations"] }
quote = { version = "1.0.10", default-features = false }

[dependencies.syn]
version = "1.0.82"
features = [                    # Reason why this feature is needed:
        "extra-traits",         # Debug output in tests.
        "fold",                 # `self_replacer` needs to tree-walk.
        "full",                 # for parsing code and not just types.
]


[lib]
proc-macro = true
