[package]
name = "zoet"
version = "0.1.10"
authors = ["Peter Corlett <abuse@cabal.org.uk>"]
edition = "2021"
description = "Adds `#[zoet]` macro to reduce boilerplate when implementing common traits."
license = "MIT"
repository = "https://github.com/mooli/zoet-rs"
keywords = ["macro", "derive", "trait", "boilerplate", "sweet"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "no-std", "rust-patterns" ]
readme = "../README.md"

[package.metadata.cargo-all-features]
#### See <https://github.com/frewsxcv/cargo-all-features>
#skip_feature_sets = ["clippy-insane"]

[features]

default = [
        "alloc",
#        "clippy-insane",
]

#### The public features.
## Enable to support generating traits which use an allocator.
alloc = ["zoet-macro/alloc"]
## enable to have clippy moan extensively. Mainly a developer flag, so you probably don't want it.
clippy-insane = ["zoet-macro/clippy-insane"]
## Enable to support generating traits which are nightly-unstable.
#nightly = ["zoet-macro/nightly"]

[dependencies]
zoet-macro = { version = "0.1.10", path = "../zoet-macro/", default-features = false }
